--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Tarea_1_CM</string>
+    <string name="bienvenido_a_nuestra_app">Bienvenido a nuestra App</string>
+    <string name="comenzar">Comenzar</string>
+    <string name="mejor_experiencia">Listo para una experiencia como nunca antes haz visto?</string>
+    <string name="todo">TODO</string>
+    <string name="todo2">TODO</string>
+    <string name="atras">Atras</string>
+    <string name="usuario">Usuario</string>
+    <string name="contrase_a">Contraseña</string>
+    <string name="ingresar">Ingresar</string>
+    <string name="ingresa_tu_cuenta">Ingresa tu cuenta</string>
 </resources>
